tests/NormalTests/paczka1/small_fuzzy/19252226.err
Error in line 7: 1CHOMIZG8JW A555 56,0
Error in line 14: 6rxGb9lPM0 A422 19,5
